--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2"
