--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "imagesloaded": "^5.0.0",
+    "masonry-layout": "^4.2.2"
   }
 }
