--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "imagesloaded": "^5.0.0",
-    "masonry-layout": "^4.2.2"
+    "masonry-layout": "^4.2.2",
+    "odometer": "^0.4.8"
   }
 }
